# railyard

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  README.md  dev  dev-cli  dev-server  docker-compose.yml  spotr.db
apps/cli/: Cargo.toml
apps/cli/src/: auth.rs  config.rs  context.rs  http.rs  main.rs  resolve.rs
apps/cli/src/commands/: init.rs  link.rs  login.rs  mod.rs  unlink.rs  up.rs  user.rs  whoami.rs
apps/server/: Cargo.toml
apps/server/src/: api.rs  app.rs  cli.rs  config.rs  control_plane.rs  daemon.rs  invite.rs  main.rs  paths.rs  proxy.rs  runtime.rs  state.rs
apps/server/src/auth/: middleware.rs  mod.rs  nonce_cache.rs  store.rs
apps/server/src/cli/: daemon.rs  mod.rs  user.rs
apps/server/src/cli/commands/: down.rs  mod.rs  restart.rs  serve.rs  server.rs  status.rs  up.rs
apps/server/src/cli/commands/auth/: list_keys.rs  mod.rs  register_key.rs  revoke_key.rs
apps/server/src/cli/commands/config/: mod.rs  set_public_url.rs  show.rs
apps/server/src/daemon/: api.rs  mod.rs  process.rs  server.rs  state.rs
apps/server/src/db/: deployment.rs  invite.rs  mod.rs  project.rs  user.rs
apps/server/src/http/: api.rs  auth.rs  mod.rs  proxy.rs  server.rs  state.rs
apps/server/src/runtime/: layout.rs  mod.rs  process.rs  server.rs
docker/: server-dev.Dockerfile  server-dev.sh
docs/: auth.md  cli.md  config.md  model.md
