[workspace]
members = [
    "apps/*",
    "packages/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
railyard-auth = { path = "packages/auth" }
railyard-manifest = { path = "packages/manifest" }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
indexmap = { version = "2", features = ["serde"] }
json5 = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
serde_with = "3"
sha2 = "0.10"
url = "2"
