[package]
name = "railyard"
version.workspace = true
edition.workspace = true

[dependencies]
base64.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
rand.workspace = true
railyard-auth.workspace = true
railyard-manifest.workspace = true
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
url.workspace = true
