[package]
name = "railyard"
version.workspace = true
edition.workspace = true

[dependencies]
base64.workspace = true
clap.workspace = true
dialoguer = "0.11"
ed25519-dalek.workspace = true
hex.workspace = true
rand.workspace = true
railyard-auth.workspace = true
railyard-manifest.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url.workspace = true
