[package]
name = "railyard-server"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
axum = "0.8"
base64.workspace = true
clap.workspace = true
env_logger = "0.11"
ed25519-dalek.workspace = true
hex.workspace = true
http = "1"
log = "0.4"
nix = { version = "0.30", features = ["signal", "process"] }
pingora = { version = "0.8.0", features = ["proxy"] }
railyard-auth.workspace = true
serde_json.workspace = true
serde.workspace = true
sha2.workspace = true
tokio = { version = "1", features = ["net", "rt-multi-thread"] }
ulid = "1"
url.workspace = true
