[package]
name = "railyard-server"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
axum = "0.8"
clap.workspace = true
env_logger = "0.11"
nix = { version = "0.30", features = ["signal", "process"] }
pingora = { version = "0.8.0", features = ["proxy"] }
serde.workspace = true
tokio = { version = "1", features = ["net", "rt-multi-thread"] }
