[package]
name = "railyard-server"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
axum = "0.8"
base64.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
env_logger = "0.11"
flate2 = "1"
hex.workspace = true
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
log = "0.4"
nix = { version = "0.30", features = ["signal", "process", "hostname"] }
pingora = { version = "0.8.0", features = ["proxy"] }
rand.workspace = true
railyard-auth.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar = "0.4"
tokio = { version = "1", features = ["fs", "io-util", "net", "rt-multi-thread"] }
libsql = { version = "0.9", default-features = false, features = ["core"] }
